<resources>
    <string name="app_name">NoiseDetector</string>
    <string name="action_settings">Settings</string>
    <string name="start_record">开始检测</string>
    <string name="stop_detect">停止检测</string>
    <string name="db">DB</string>
    <string name="_0">0</string>
    <string name="delete">删除</string>
    <string name="at_location">定位中</string>
    <string name="last_page">上一页</string>
    <string name="next_page">下一页</string>
    <string name="edit">编辑</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="location">位置</string>
</resources>
