<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/at_location"
        android:textSize="14sp"
        android:textColor="@color/colorPrimary"/>

    <TextView
        android:id="@+id/soundDiscView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:textSize="70sp"
        android:layout_marginTop="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/db"
        android:layout_toEndOf="@+id/soundDiscView"
        android:layout_alignBottom="@+id/soundDiscView"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="10dp"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/btn_start_detect"
        android:layout_height="wrap_content"
        style="@style/HoloNewBtnStyle"
        android:layout_above="@+id/btn_stop_detect"
        android:layout_centerHorizontal="true"
        android:text="@string/start_record"/>

    <Button
        android:id="@+id/btn_stop_detect"
        android:layout_height="wrap_content"
        style="@style/HoloNewBtnStyle"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:text="@string/stop_detect"
        android:enabled="false"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"/>

</RelativeLayout>
