<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textSize="20sp"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/et_rename"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp">

        <Button
            android:id="@+id/btn_cancel"
            android:text="@string/cancel"
            style="@style/SlideBtnStyle"
            android:layout_marginEnd="30dp"
            android:layout_width="wrap_content"
            android:layout_height="40dp"/>

        <Button
            android:id="@+id/btn_ok"
            android:text="@string/ok"
            style="@style/SlideBtnStyle"
            android:layout_width="wrap_content"
            android:layout_height="40dp"/>

    </LinearLayout>

</LinearLayout>